--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,8 @@ jobs:
               mkdir -p out/.circleci && cp -a .circleci/. out/.circleci/.
               cd out
 
+              echo "multitoken.pool.claims" > CNAME
+
               git add -A
               git commit -m "Automated deployment to GitHub Pages: ${CIRCLE_SHA1}" --allow-empty
 
